--- a/Person.vcxproj.filters
+++ b/Person.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClCompile Include="PersonList.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="PersonCLI.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Person.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="PersonList.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="PersonCLI.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
